# RMB-Mirror

./: .gitattributes  .gitignore  .mailmap  CMakeLists.txt  Dockerfile  Dockerfile.cache  README.md  docker-compose.yml  ratemybot.service
.devcontainer/: Dockerfile  configure.sh  devcontainer.json
Dev Logs/: Edward-DevLog  Frankie Dev-Log  fin ashton dev log.text
arm_code/: arm_code.ino
code/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
code/.devcontainer/: Dockerfile  devcontainer.json
code/include/: interpreter.h  runtime_types.h  servo_control.h  stepper_control.h
code/src/: face_detector.cpp  interpreter.cpp  main.cpp  servo_control.cpp  stepper_control.cpp
include/: landmark_extractor.h  logging.h  oled_screen.h  runtime_types.h  servo_control.h  stepper_control.h
media/: IMG_4815.MOV  IMG_5039.MOV  IMG_5051.MOV  IMG_5165.MOV  IMG_5170.MOV  IMG_5200.MOV  IMG_5220.DNG  IMG_5226.MOV  IMG_5231.DNG
models/: _Arm Base MK II.07e80303-d828-44e2-8f45-175d2617ada1.f3d  _Arm Base MK II.72d2eaf0-e395-48d6-8b20-8c448280bf8d.f3d  _Arm Base MK II.75f83a68-b293-419b-b7a1-1295b811fe14.f3d  _Arm Limb 2 Dynamixel.92e19cb4-8085-4935-b305-b72b073291ea.f3d  _Arm Limb 2 Dynamixel.bfbb3478-05da-4971-9e82-7996b8dbfa84.f3d  _Arm base.2ffd8a9a-10d5-4f2f-9273-e72e92dafab5.f3d  _Arm limb 2.1a77d3d6-5606-4075-9069-15030fea9f4f.f3d  _Button housing.67708ecc-d906-4079-a98f-9e7625d90127.f3d  _Cap.6a81387d-0d19-46f6-b313-7a321f0e394d.f3d  _Center Arm Top.5e4394fa-e90c-437b-a858-13c8ca8d634e.f3d  _Grip arm bracket front side.1cbf9639-d063-4f21-8cd9-8bfc683fe057.f3d  _Grip arm.5dc257c2-be48-415f-a2dd-390b55c8ae94.f3d  _Long Gear.fd5dc048-3403-451a-9887-8e6b901c58fe.f3d  _MDF base plate.cb4b44ed-4c01-4c83-9ae7-5166d5d18816.f3d  _MDF walls.563d6392-8aeb-4b5f-a8dd-61cc84657718.f3d  _Motor mount.2d6efdfc-5d12-4458-8d0e-ab8daa7fd196.f3d  _Motor mount.45995b92-4b40-4a62-bec2-e495f78e715f.f3d  _Motorised arm cap _ motor attachment.884ee04a-5357-4d22-8c85-7c276a7b6682.f3d  _Motorised arm cap _ motor attachment.abfe61bb-9a0f-4074-8c70-eef68518f80a.f3d  _Motorised arm support bracket.2e501b18-44f0-4462-bb6e-af1a0b4020e3.f3d  _Motorised arm.b936b334-40dd-4a6a-bc5e-916818be2f43.f3d  _Paper roll arm _ grip arm cap.a85ccca9-b7a4-4d6e-98ef-0463d6195870.f3d  _Paper roll arm bracket.b6dafd9f-6d07-430f-9bc5-a98820684cc9.f3d  _Paper roll arm.9b7fd9b9-257f-4418-82e6-3a983f97c50d.f3d  _Pen Holder Prototype.81b64bac-0799-4906-a694-e2d1f3394e13.f3d  _Roller motor connector.55004d22-41e6-4f78-93e1-cf13529271f8.f3d  _Test Thread.e67c5d5b-8ed2-4406-8ac4-c447bfbe1a1b.f3d  _acrylic bracket inside.09c7daba-0ee9-4f8b-82e1-720a8f96236f.f3d  _acrylic bracket inside.18a708f7-b253-4928-abd1-c462924826e3.f3d  _acrylic lower bracket.b6740a63-519d-45cc-87e6-a969d2d498be.f3d  _body bracket v1.9dabf268-07d1-46ed-89ed-1b83d9925f87.f3d  _clamp top.46419cef-eac4-46b9-a695-fc1142d0df38.f3d  _corner brackets.35f45535-52fe-4c7a-9ea4-c18f3b0c6e2f.f3d  _corner stand.2b617d94-af73-4d40-9075-9734b86fe06d.f3d  _paper guide mount.fa4ce9f8-fc40-4f42-b492-7d3dc72e7cbd.f3d  _paper guides.c25c2183-df1f-4a5f-b5f6-c267c81911b1.f3d  _paper roll mount.a9b0b850-d197-4a2a-a867-633a3fc4cd30.f3d  _pcb-footprint.d29b2546-1c5a-49bb-88ae-6fe5814387b5.f3d  _pcb-post.2ef064a2-71a8-4e5f-af67-261210c2e70e.f3d  _roller mount.b452378f-77c6-4f79-b0ad-7108104b07cb.f3d
models/Final product/Arm pieces/: Arm Base MK II v11.f3d  Arm Limb 2 Dynamixel v24.f3d  Second Pen Holder v25.f3z  _Center Arm Bottom.e4c66e9a-b7f6-456d-9f43-f8f4c9d8eaf7.f3d  _Second Pen Holder.63e9df75-61b4-41e8-a8de-24fbc4918f36.f3d
models/Final product/Conveyor system/: _motor bracket.44d059b8-f0a0-49a9-bc9c-bc6a08ed9233.f3d  _paper roll cap.a2efeacb-14b6-496b-94ca-1afc7da3c210.f3d
models/Final product/Outer box/: Handle v4.f3d  _base plate.83a4b455-5637-4f7c-b5de-213f8b637dbf.f3d  acrylic bracket inside v4.f3d  camera mount v2.f3d
models/Prototypes/: _Arm limb 1.2eed6a4d-bf02-4668-9319-046f86bff51b.f3d  _assembly.3f910c1e-af1a-4b28-b3e4-86c0adf71ee4.f3d  _clamp bottom.d704925b-7153-410f-b46b-f4965f0c3751.f3d  _vertical to vertical v2.d84c17af-223a-4e26-a2c8-23d5d27c0e32.f3d
pcb/: PCB.json  Schematic.json
poster/: a0size.sty  figure1.tex  main.tex  sample.bib
src/: face_detector.cpp  landmark_extractor.cpp  logging.cpp  main.cpp  oled_screen.cpp  servo_control.cpp  stepper_control.cpp
test-plotter/: README.md  main.py
